--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="We build web developers">
+  
   <title>Devdify</title>
   
   <!-- Custom Styles -->
   <script src="https://kit.fontawesome.com/4f89df3a85.js" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -274,8 +277,9 @@
           <div class="faq-question ds-flex space">
             <h4>What does a certificate from Devdify mean?</h4>
             <i class="fa-solid fa-angle-down"></i>
+            <i class="fa-solid fa-angle-up"></i>
           </div>
-          <div class="faq-ans">
+          <div class="faq-ans ds-none">
             <p>By the end of this program, you’ll have:</p>
             <p>Gained fundamental web development skills from an industry leader.
               Expanded your portfolio by developing your own web
@@ -292,6 +296,7 @@
           <div class="faq-question ds-flex space">
             <h4>What's the schedule and duration of each course?</h4>
             <i class="fa-solid fa-angle-down"></i>
+            <i class="fa-solid fa-angle-up"></i>
           </div>
           <div class="faq-ans ds-none">
             <p>The schedule and duration varies per each course based on the curriculum and topics involved to be practiced.</p>
@@ -302,8 +307,9 @@
           <div class="faq-question ds-flex space">
             <h4>Who are the instructors?</h4>
             <i class="fa-solid fa-angle-down"></i>
+            <i class="fa-solid fa-angle-up"></i>
           </div>
-          <div class="faq-ans">
+          <div class="faq-ans ds-none">
             <p>Our instructors are real-world Product Leaders working at top Silicon Valley companies including Google, Facebook, Netflix, Airbnb, PayPal, Uber, and Amazon. As experienced professionals who build digital products for millions of people every day, they know exactly what it takes to get hired as a Product Manager and succeed in the role once you have it.</p>
           </div>
         </div>
@@ -312,6 +318,7 @@
           <div class="faq-question ds-flex space">
             <h4>How many students are in each class?</h4>
             <i class="fa-solid fa-angle-down"></i>
+            <i class="fa-solid fa-angle-up"></i>
           </div>
           <div class="faq-ans ds-none">
             <p>The total number of students in a class range from 100 to 500 based on the number of students that applied for that class</p>
@@ -322,6 +329,7 @@
           <div class="faq-question ds-flex space">
             <h4>What are the classes like?</h4>
             <i class="fa-solid fa-angle-down"></i>
+            <i class="fa-solid fa-angle-up"></i>
           </div>
           <div class="faq-ans ds-none">
             <p>Classes are structured to keep students engaged in learning the fundamentals and new theories for web development using the latest technology with assignments and mini project to help them experience the daily life as a web developer.</p>
@@ -332,6 +340,7 @@
           <div class="faq-question ds-flex space">
             <h4>Are the courses in person or online?</h4>
             <i class="fa-solid fa-angle-down"></i>
+            <i class="fa-solid fa-angle-up"></i>
           </div>
           <div class="faq-ans ds-none">
             <p>All courses are all online, giving students opportunities to learn from the top best in the industry without having to battle with tye barrier of distance or location.</p>
@@ -342,6 +351,7 @@
           <div class="faq-question ds-flex space">
             <h4>Is my professional background a good fit for Trekt?</h4>
             <i class="fa-solid fa-angle-down"></i>
+            <i class="fa-solid fa-angle-up"></i>
           </div>
           <div class="faq-ans ds-none">
             <p>Depends on the course a student have selected to study. Some courses requires you having gone through the basics but don't worry we got you covered because each courses have a link to expose students about the fundamentals.</p>
@@ -352,6 +362,7 @@
           <div class="faq-question ds-flex space">
             <h4>Can Devdify provide custom training for my company?</h4>
             <i class="fa-solid fa-angle-down"></i>
+            <i class="fa-solid fa-angle-up"></i>
           </div>
           <div class="faq-ans ds-none">
             <p>Devdify provides learning seminars even for companies and web agencies to keep updated on the latest market trends and also to get started in web development.</p> 
@@ -364,6 +375,7 @@
           <div class="faq-question ds-flex space">
             <h4>How much does a course cost?</h4>
             <i class="fa-solid fa-angle-down"></i>
+            <i class="fa-solid fa-angle-up"></i>
           </div>
           <div class="faq-ans ds-none">
             <p>Depending on the course that a student has enrolled for, course prices range from $20 - $200.
@@ -374,6 +386,7 @@
           <div class="faq-question ds-flex space">
             <h4>What's the application process like and how do I get started?</h4>
             <i class="fa-solid fa-angle-down"></i>
+            <i class="fa-solid fa-angle-up"></i>
           </div>
           <div class="faq-ans ds-none">
             <p>To register for a course click on the <a href="#">link</a>, fil  all the required information</p>
@@ -416,7 +429,7 @@
       <a href="#"><i class="fa-brands fa-twitter-square"></i></a>
     </div>
     
-    <p>Design by Anna Pomonova and built with 💜 by <a href="#">Jexcode</a></p>
+    <p>Design by <a href="#" class="glow">Anna Paramonova</a> and built with 💜 by <a href="https://github.com/jexcode" class="glow">Jexcode</a></p>
   </footer>
   <!-- Script -->
   <script src="main.js"></script>
