--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <i class="fa-solid fa-angle-down"></i>
             <i class="fa-solid fa-angle-up"></i>
           </div>
-          <div class="faq-ans ds-none">
+          <div class="faq-ans ">
             <p>By the end of this program, you’ll have:</p>
             <p>Gained fundamental web development skills from an industry leader.
               Expanded your portfolio by developing your own web
@@ -298,7 +298,7 @@
             <i class="fa-solid fa-angle-down"></i>
             <i class="fa-solid fa-angle-up"></i>
           </div>
-          <div class="faq-ans ds-none">
+          <div class="faq-ans ">
             <p>The schedule and duration varies per each course based on the curriculum and topics involved to be practiced.</p>
           </div>
         </div>
@@ -309,7 +309,7 @@
             <i class="fa-solid fa-angle-down"></i>
             <i class="fa-solid fa-angle-up"></i>
           </div>
-          <div class="faq-ans ds-none">
+          <div class="faq-ans">
             <p>Our instructors are real-world Product Leaders working at top Silicon Valley companies including Google, Facebook, Netflix, Airbnb, PayPal, Uber, and Amazon. As experienced professionals who build digital products for millions of people every day, they know exactly what it takes to get hired as a Product Manager and succeed in the role once you have it.</p>
           </div>
         </div>
@@ -320,7 +320,7 @@
             <i class="fa-solid fa-angle-down"></i>
             <i class="fa-solid fa-angle-up"></i>
           </div>
-          <div class="faq-ans ds-none">
+          <div class="faq-ans">
             <p>The total number of students in a class range from 100 to 500 based on the number of students that applied for that class</p>
           </div>
         </div>
@@ -331,7 +331,7 @@
             <i class="fa-solid fa-angle-down"></i>
             <i class="fa-solid fa-angle-up"></i>
           </div>
-          <div class="faq-ans ds-none">
+          <div class="faq-ans">
             <p>Classes are structured to keep students engaged in learning the fundamentals and new theories for web development using the latest technology with assignments and mini project to help them experience the daily life as a web developer.</p>
           </div>
         </div>
@@ -342,7 +342,7 @@
             <i class="fa-solid fa-angle-down"></i>
             <i class="fa-solid fa-angle-up"></i>
           </div>
-          <div class="faq-ans ds-none">
+          <div class="faq-ans">
             <p>All courses are all online, giving students opportunities to learn from the top best in the industry without having to battle with tye barrier of distance or location.</p>
           </div>
         </div>
@@ -353,7 +353,7 @@
             <i class="fa-solid fa-angle-down"></i>
             <i class="fa-solid fa-angle-up"></i>
           </div>
-          <div class="faq-ans ds-none">
+          <div class="faq-ans">
             <p>Depends on the course a student have selected to study. Some courses requires you having gone through the basics but don't worry we got you covered because each courses have a link to expose students about the fundamentals.</p>
           </div>
         </div>
@@ -364,7 +364,7 @@
             <i class="fa-solid fa-angle-down"></i>
             <i class="fa-solid fa-angle-up"></i>
           </div>
-          <div class="faq-ans ds-none">
+          <div class="faq-ans ">
             <p>Devdify provides learning seminars even for companies and web agencies to keep updated on the latest market trends and also to get started in web development.</p> 
             
            <p> Read more on tha t<a href="#"> here</a>.</p>
@@ -377,7 +377,7 @@
             <i class="fa-solid fa-angle-down"></i>
             <i class="fa-solid fa-angle-up"></i>
           </div>
-          <div class="faq-ans ds-none">
+          <div class="faq-ans">
             <p>Depending on the course that a student has enrolled for, course prices range from $20 - $200.
           </div>
         </div>
@@ -388,7 +388,7 @@
             <i class="fa-solid fa-angle-down"></i>
             <i class="fa-solid fa-angle-up"></i>
           </div>
-          <div class="faq-ans ds-none">
+          <div class="faq-ans">
             <p>To register for a course click on the <a href="#">link</a>, fil  all the required information</p>
           </div>
         </div>
